wp-content/themes/vanguard-history/css/_header.scss
@import "./_var.scss";

.site-header {
	background-color: $SCVBlack;
	padding: 12px;
	display: flex;
	align-items: center;
	position: relative;
}

.site-branding {
	flex: 1;
	font-family: SignPainter;
	font-size: 40px;

	.site-title {
		margin: 0 20px;
		text-align: center;
	}

	a {
		color: $White;
		text-decoration: none;
	}
}

.main-navigation {
	width: auto;
}
.menu-toggle,
.menu-toggle:hover,
.menu-toggle:focus {
	background-color: transparent;
	background-image: url("/wp-content/themes/vanguard-history/img/Hamburger_Menu.svg");
	background-repeat: no-repeat;
	background-size: contain;
	width: 38px;
	height: 32px;
}

.menu-main-navigation-container {
	position: absolute;
	background-color: $SCVBlack;
	right: 0;
	top: 100%;
	width: 100%;
	z-index: 10;

	.menu-item {
		padding: 1rem;
		a {
			color: $White;
			&:hover {
				color: $SCVRed;
			}
		}
	}
}

@media screen and (min-width: $bp--sm) {
	.site-branding {
		.site-title {
			text-align: left;
		}
	}
	.menu-main-navigation-container {
		position: relative;
	}
}

